--- a/Blogwasm/Layout/NavMenu.razor
+++ b/Blogwasm/Layout/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using Blogwasm.Models
+@inject HttpClient Http
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Blogwasm</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -9,21 +12,14 @@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
+        @foreach(var blog in blogs)
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="@blog.Url" Match="NavLinkMatch.All">
+                    @blog.Name
+                </NavLink>
+            </div>
+        }
     </nav>
 </div>
 
@@ -31,6 +27,14 @@
     private bool collapseNavMenu = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+
+    private BlogItem[] blogs = new BlogItem[0];
+
+    protected override async Task OnInitializedAsync()
+    {
+        //load blog post list from json
+        blogs = await Http.GetFromJsonAsync<BlogItem[]>("blogindex/blog-posts.json") ?? new BlogItem[0];
+    }
 
     private void ToggleNavMenu()
     {
