Adding bicep files

--- a/Blogwasm/Layout/NavMenu.razor
+++ b/Blogwasm/Layout/NavMenu.razor
@@ -1,5 +1,4 @@
-﻿@using Blogwasm.Models
-@inject HttpClient Http
+﻿@inject HttpClient Http
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
