Adding new blog post plus some CSS

--- a/Blogwasm/Layout/MainLayout.razor
+++ b/Blogwasm/Layout/MainLayout.razor
@@ -6,7 +6,9 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <a href="https://github.com/dylan-mccarthy" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/dylan-mccarthy-181199ab" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/DMCAsAService" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
 
         <article class="content px-4">
