--- a/Blogwasm/Pages/BlogPost.razor
+++ b/Blogwasm/Pages/BlogPost.razor
@@ -7,7 +7,7 @@
     <PageTitle>@Title</PageTitle>
 
     <div class="blog-header">
-        <h1 class="blog-title">@Title</h1>
+        <h1 class="blog-title wrap-text">@Title</h1>
         <p class="blog-date">Posted on @Date.ToString("MMMM dd, yyyy")</p>
     </div>
     <div class="blog-content">@((MarkupString)@blogHtml)</div>
