--- a/Blogwasm/Layout/NavMenu.razor.css
+++ b/Blogwasm/Layout/NavMenu.razor.css
@@ -34,7 +34,7 @@
 }
 
 .nav-item {
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     padding-bottom: 0.5rem;
 }
 
@@ -52,7 +52,6 @@
         height: 3rem;
         display: flex;
         align-items: center;
-        line-height: 3rem;
     }
 
 .nav-item ::deep a.active {
@@ -63,6 +62,13 @@
 .nav-item ::deep a:hover {
     background-color: rgba(255,255,255,0.1);
     color: white;
+}
+
+.sidebar {
+    width: 250px;
+    height: 100vh;
+    position: sticky;
+    top: 0;
 }
 
 @media (min-width: 641px) {
@@ -79,5 +85,12 @@
         /* Allow sidebar to scroll for tall menus */
         height: calc(100vh - 3.5rem);
         overflow-y: auto;
+    }
+
+    .sidebar {
+        width: 250px;
+        height: 100vh;
+        position: sticky;
+        top: 0;
     }
 }
