--- a/Blogwasm/Layout/MainLayout.razor.css
+++ b/Blogwasm/Layout/MainLayout.razor.css
@@ -6,17 +6,20 @@
 
 main {
     flex: 1;
+    background-color: rgb(0, 19, 43);
+    color: white;
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgb(0, 19, 43) 0%, #0465af 70%);
 }
 
 .top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
+    /* background-color: #f7f7f7; */
+    background-color: rgb(1, 43, 82);
+    border-bottom: 1px solid #0462aa;
     justify-content: flex-end;
-    height: 3.5rem;
+    height: 5.5rem;
     display: flex;
     align-items: center;
 }
