--- a/Blogwasm/Pages/BlogPost.razor
+++ b/Blogwasm/Pages/BlogPost.razor
@@ -6,11 +6,13 @@
 {
     <PageTitle>@Title</PageTitle>
 
-    <div class="blog-header">
-        <h1 class="blog-title wrap-text">@Title</h1>
-        <p class="blog-date">Posted on @Date.ToString("MMMM dd, yyyy")</p>
+    <div class="blog">
+        <div class="blog-header">
+            <h1 class="blog-title wrap-text">@Title</h1>
+            <p class="blog-date">Posted on @Date.ToString("MMMM dd, yyyy")</p>
+        </div>
+        <div class="blog-content">@((MarkupString)@blogHtml)</div>
     </div>
-    <div class="blog-content">@((MarkupString)@blogHtml)</div>
 }
 
 
