--- a/Blogwasm/wwwroot/css/app.css
+++ b/Blogwasm/wwwroot/css/app.css
@@ -1,5 +1,6 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: rgb(0, 19, 43);
 }
 
 h1:focus {
